# Passive-Network-Asset-Discovery-System

./: .gitignore  README.md  docker-compose.dashboard.yml  docker-compose.yml
api/app/: db.py  main.py  models.py
clickhouse/: init.sql
collector/: CMakeLists.txt
collector-cpp/include/: ArpParser.hpp
collector-cpp/src/: ArpParser.cpp  HttpClient.cpp
collector/include/: ArpParser.hpp  AssetEvent.hpp  DhcpParser.hpp  HttpClient.hpp  ProtocolParser.hpp  SsdpParser.hpp
collector/src/: ArpParser.cpp  DhcpParser.cpp  SsdpParser.cpp  main.cpp
config/: collector.conf
dashboard/: app.py
docs/: DEMO.md
docs/demo-output/: asset-events.json  assets.json  summary.json
samples/: arp-demo.pcap  arp-only-demo.pcap  mixed-demo.pcap
scripts/: reset-demo-data.sh  run-realtime-collector.sh  seed-known-assets.sh
